--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@redwoodjs/forms": "^0.23.0",
     "@redwoodjs/router": "^0.23.0",
     "@redwoodjs/web": "^0.23.0",
